--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -70,7 +70,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 -AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
 -AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
--AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=1.000000)
+-AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=-1.000000)
 -AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftTriggerAxis,Scale=1.000000)
 -AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightTriggerAxis,Scale=1.000000)
 -AxisMappings=(AxisName="Left Track Throttle",Key=Gamepad_LeftShoulder,Scale=-1.000000)
@@ -80,7 +80,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="Intend Move Forwards",Key=A,Scale=-1.000000)
 -AxisMappings=(AxisName="Turn Right",Key=Gamepad_LeftX,Scale=1.000000)
 -AxisMappings=(AxisName="Turn Right",Key=D,Scale=1.000000)
--AxisMappings=(AxisName="Turn Right",Key=S,Scale=-1.000000)
+-AxisMappings=(AxisName="Turn Right",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
@@ -91,10 +91,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightShoulder,Scale=-1.000000)
 +AxisMappings=(AxisName="Intend Move Forwards",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="Intend Move Forwards",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="Intend Move Forwards",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="Intend Move Forwards",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="Turn Right",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="Turn Right",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="Turn Right",Key=S,Scale=-1.000000)
++AxisMappings=(AxisName="Turn Right",Key=A,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
