Removed high-resolution landscape to save storage space

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 BattleTank/Content/StarterContent/*
 BattleTank/ipch/BATTLETANK-3525f958/BATTLETANK-521f249b.ipch
 BattleTank/BattleTank.VC.db
+BattleTank/Content/Maps/Battleground_BuiltData.uasset
